--- a/app.yaml
+++ b/app.yaml
@@ -7,8 +7,12 @@ libraries:
   version: "0.12"
 
 handlers:
+- url: /static/lib
+  static_dir: node_modules
+- url: /static
+  static_dir: static
 - url: /.*
-  script: main.app
+  script: app.main.app
 
 instance_class: B1
 basic_scaling:
